# miditrackpad

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  miditrackpad.cpp
cmake/: FindEvDev.cmake  FindPortMidi.cmake
include/: evdev_raii.h  portmidi_raii.h
src/: CMakeLists.txt  evdev_raii.cpp  portmidi_raii.cpp
